# npbNewAPI

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
functions/: main.py  requirements.txt  result.py  result_repository.py
graphQL/: database.sqlite3
helloworld/: main.py  requirements.txt
responder/: main.py
scripts/: api.py
