[tool.poetry]
name = "npbNewsAPI"
version = "0.1.0"
description = ""
authors = ["faronan"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
graphene = "^2.1.8"
SQLAlchemy = "^1.3.20"
graphene-sqlalchemy = "^2.3.0"
Flask = "^1.1.2"
Flask-GraphQL = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
