[tool.poetry]
name = "npbNewsAPI"
version = "0.1.0"
description = ""
authors = ["faronan"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
responder = "^2.0.5"
graphene = "^2.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
