[tool.poetry]
name = "npbNewsAPI"
version = "0.1.0"
description = ""
authors = ["faronan"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
google-cloud-firestore = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
